--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
     "react-scripts": "5.0.1",
     "redux": "^4.2.1",
     "redux-logger": "^3.0.6",
+    "redux-persist": "^6.0.0",
+    "reselect": "^4.1.8",
     "resolve-url-loader": "^5.0.0",
     "sass": "^1.69.2",
     "source-map": "0.5.7",
